fix: remove extra margin on inline notification

--- a/packages/gatsby-theme-carbon/src/components/InlineNotification/InlineNotification.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/InlineNotification/InlineNotification.module.scss
@@ -1,6 +1,8 @@
 .notification :global(.bx--inline-notification) {
   max-width: 100%;
   box-shadow: none;
+  margin-bottom: 0;
+  margin-top: 0;
   border-right: 1px solid $carbon--blue-30;
   border-top: 1px solid $carbon--blue-30;
   border-bottom: 1px solid $carbon--blue-30;
